# env

./: .gitignore  Dockerfile  README.md  TODO.md  build.sh  compose.yml  entrypoint.sh  justfile.dataproduct  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh
antora/: add-collector-config.js  antora-playbook.yml.jinja  generate-documentation.sh  latest-redirection.js  local-antora-playbook.yml.jinja
data-products/: generate-documentation.sh  justfile
data-products/antora/: add-collector-config.js  antora-playbook.yml.jinja  local-antora-playbook.yml.jinja
data-products/antora/supplemental-ui/css/: extra.css
data-products/antora/supplemental-ui/partials/: head-styles.hbs
